<resources>
    <string name="app_name">Еда Онлайн</string>
    <string-array name="titles">
        <item>Салаты</item>
        <item>Супы</item>
        <item>Десерты</item>
        <item>Пицца</item>
    </string-array>

    <string-array name="drawer_titles">
        <item>Меню</item>
        <item>Акции</item>
        <item>Доставка</item>
        <item>Оплата</item>
        <item>Контакты</item>
        <item>Заказ по телефону</item>

    </string-array>

    <string name="hello_blank_fragment">hello</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="action_contacts">Контакты</string>
    <string name="number"><a href="+375298517023"> +375 (29) 851-70-23</a></string>
    <string name="address"><a href="г. Минск, ул. Петра Глебки 5">г. Минск, ул. Петра Глебки 5</a></string>
    <string name="lat">53.908757</string>
    <string name="lng">27.469890</string>
    <string name="address_cafe_1">г. Минск, ул. Петра Глебки, 5</string>
    <string name="address_cafe_2">г. Минск, ул. Веры Хоружей, 8 </string>
    <string name="address_cafe_3">г. Минск, ул. Воронянского, 31</string>
    <string name="address_cafe_4">г. Минск, ул. Энгельса, 16</string>
    <string name="number_str">Телефон: </string>
    <string name="imageIcon">imageIcon</string>
    <string name="name">offer_name</string>
    <string name="weight">weight</string>
    <string name="description">description</string>
    <string name="price">price</string>
    <string name="address_top">Адреса: </string>
    <string name="categoryId">categoryId</string>
    <string name="weight_detailed">Вес: </string>
    <string name="price_detailed">Цена: </string>
    <string name="description_detailed">Описание: </string>
    <string name="image">Картинка</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="drawer_item">drawer_item</string>
    <string name="drawer_name">Aliaksandr Navumchyk</string>
    <string name="drawer_email">studiophantomrecords@gmail.com</string>
    <string name="offer_description">offer_description</string>
    <string name="offer_currency"> ₽</string>
    <string name="name_of_category">Name of category</string>
    <string name="ad_title">Сделать заказ</string>
    <string name="ad_msg">+375(29)851-70-23</string>
    <string name="ad_pos">ОК</string>
    <string name="ad_neg">Отмена</string>
    <string name="minsk">Минск</string>
    <string name="delivery">Доставка осуществляется круглосуточно за исключением технического перерыва с 05:00 до 07:00.</string>


</resources>
